JW - fixed chrome issue ( img no height, width in rems) overflow-x on container, added margin-top to section headers

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -185,9 +185,9 @@ button {
   border-radius: 50%;
 }
 
-.container {
+/*.container {
   max-width: none;
-}
+}*/
 
 /* ************************************************************************* */
 /* main-distributed{} defines attributes that are applicable to the entire page */
@@ -199,6 +199,8 @@ button {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   /* Breaking the page into eight rows: a header, six sections & a footer */
   grid-template-rows: 1fr auto;
+  overflow-x: hidden;
+  max-width: none;
 }
 
 /* ----------------- ABOUT ME - GRID FOR MAIN SECTIONS --------------------- */
@@ -630,7 +632,7 @@ nav ul .active a {
   grid-area: 3 / 1 / 3 / 13;
   display: grid;
   grid-template-columns: repeat(12,1fr);
-  grid-template-rows: auto repeat(8,auto);
+  grid-template-rows: auto repeat(7,auto);
   grid-row-gap: 10rem;
 }
 
@@ -688,6 +690,7 @@ nav ul .active a {
 .daandr .quad_graph {
   grid-area: 4 / 8 / 4 / 11;
   align-self: center;
+  width: 40rem;
 }
 
 /* .daandr .italic_quotes_1 {
@@ -995,25 +998,49 @@ th {
   grid-area: 7 / 3 / 7 / 5;
 }
 
+.wireframe_1 img {
+  width: 30rem;
+}
+
 .wireframe_2 {
   grid-area: 7 / 6 / 7 / 8;
+}
+
+.wireframe_2 img {
+  width: 30rem;
 }
 
 .wireframe_3 {
   grid-area: 7 / 9 / 7 / 11;
 }
 
+.wireframe_3 img {
+  width: 30rem;
+}
+
 .wireframe_4 {
   grid-area: 8 / 3 / 8 / 5;
+}
+
+.wireframe_4 img {
+  width: 30rem;
 }
 
 .wireframe_5 {
   grid-area: 8 / 6 / 8 / 8;
 }
 
+.wireframe_5 img {
+  width: 30rem;
+}
+
 .wireframe_6 {
   grid-area: 8 / 9 / 8 / 11;
-  padding-bottom: 10rem;
+  /*padding-bottom: 10rem;*/
+}
+
+.wireframe_6 img {
+  width: 30rem;
 }
 
 figure {
@@ -1029,10 +1056,10 @@ figure {
 }
 
 .sections .branding{
-  grid-area: 4 / 1 / 4 / 13;
+  grid-area: 5 / 1 / 5 / 13;
   display: grid;
   grid-template-columns: repeat(12,1fr);
-  grid-template-rows: auto repeat(14,auto);
+  grid-template-rows: auto repeat(13,auto);
   grid-row-gap: 10rem;
 }
 
@@ -1054,6 +1081,10 @@ figure {
 
 .branding .mood_board {
   grid-area: 2 / 8 / 4 / 11;
+}
+
+.branding .mood_board img{
+  width: 40rem;
 }
 
 .branding .color_palette_wrapper {
@@ -1175,26 +1206,22 @@ figure {
 
 .iconography .hero {
   grid-area: 2 / 1 / 3 / 4;
-  height:100%;
-  width: auto;
+  width: 30rem;
 }
 
 .iconography .share {
   grid-area: 3 / 1 / 3 / 1;
-  height: 100%;
-  width: auto;
+  width: 10rem;
 }
 
 .iconography .sync {
   grid-area: 3 / 2 / 3 / 2;
-  height: 100%;
-  width: auto;
+  width: 10rem;
 }
 
 .iconography .upload {
   grid-area: 3 / 3 / 3 / 3;
-  height: 100%;
-  width: auto;
+  width: 10rem;
 }
 
 .branding .icons_wrapper {
@@ -1276,6 +1303,10 @@ figure {
   grid-area: 8 / 3 / 8 / 6;
 }
 
+.brand_name img {
+  width: 40rem;
+}
+
 .branding .q7 {
   grid-area: 8 / 8 / 8 / 11;
   z-index: 2;
@@ -1293,10 +1324,14 @@ figure {
 
 .branding .logo_r1 {
   grid-area: 9 / 8 / 9 / 11;
+  width: 30rem;
+  padding-top: 6rem;
 }
 
 .logo_sketch {
   padding-top: 10rem;
+  width: 30rem;
+  padding-top: 3rem;
 }
 
 .branding .logo_r2_wrapper {
@@ -1313,22 +1348,23 @@ figure {
 .logo_r2 .logo_r2_1 {
   grid-area: 1 / 1;
   justify-self: center;
-  height: 30vh;
-  width: auto;
+  /*height: 30vh;*/
+  width: 13rem;
 }
 
 .logo_r2 .logo_r2_2 {
   grid-area: 1 / 2;
   justify-self: center;
-  height: 30vh;
-  width: auto;
+  /*height: 30vh;*/
+  width: 30rem;
+  align-self: center;
 }
 
 .logo_r2 .logo_r2_3 {
   grid-area: 1 / 3;
   justify-self: center;
-  height: 30vh;
-  width: auto;
+  /*height: 30vh;*/
+  width: 15rem;
 }
 
 .branding .logo_r3_wrapper {
@@ -1346,22 +1382,22 @@ figure {
 .logo_r3 .logo_r3_1 {
   grid-area: 1 / 1;
   justify-self: center;
-  height: 10rem;
-  width: auto;
+  /*height: 10rem;*/
+  width: 25rem;
 }
 
 .logo_r3 .logo_r3_2 {
   grid-area: 1 / 2;
   justify-self: center;
-  height: 10rem;
-  width: auto;
+  /*height: 10rem;*/
+  width: 25rem;
 }
 
 .logo_r3 .logo_r3_3 {
   grid-area: 1 / 3;
   justify-self: center;
-  height: 10rem;
-  width: auto;
+  /*height: 10rem;*/
+  width: 23rem;
 }
 
 .branding .final_logo {
@@ -1370,6 +1406,10 @@ figure {
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 3rem;*/
+}
+
+.final_logo img{
+  width: 35rem;
 }
 
 .branding .q8 {
@@ -1386,10 +1426,10 @@ figure {
 /*-------------------------TESTING & PROTOTYPING -----------------------*/
 
 .sections .testandproto{
-  grid-area: 5 / 1 / 5 / 13;
+  grid-area: 6 / 1 / 6 / 13;
   display: grid;
   grid-template-columns: repeat(12,1fr);
-  grid-template-rows: auto repeat(7,auto);
+  grid-template-rows: auto repeat(5,auto);
   grid-row-gap: 10rem;
 }
 
@@ -1397,7 +1437,7 @@ figure {
   grid-area: 2 / 3 / 2 / 11;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 20rem;
+  grid-column-gap: 21rem;
   grid-template-rows: auto auto auto;
   grid-row-gap: 2rem;
 }
@@ -1414,15 +1454,23 @@ figure {
   grid-area: 3 / 1;
 }
 
+.onboarding_wrapper_1 img {
+  width: 31rem;
+}
+
 .ut_wrapper_1 .onboarding_wrapper_2 {
   grid-area: 3 / 2;
+}
+
+.onboarding_wrapper_2 img {
+  width: 31rem;
 }
 
 .testandproto .ut_wrapper_2 {
   grid-area: 3 / 3 / 3 / 11;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 20rem;
+  grid-column-gap: 21rem;
   grid-template-rows: auto auto;
   grid-row-gap: 2rem;
 }
@@ -1435,15 +1483,23 @@ figure {
   grid-area: 2 / 1;
 }
 
+.file_upload_wrapper_1 img {
+  width: 31rem;
+}
+
 .ut_wrapper_2 .file_upload_wrapper_2 {
   grid-area: 2 / 2;
+}
+
+.file_upload_wrapper_2 img {
+  width: 31rem;
 }
 
 .testandproto .ut_wrapper_3 {
   grid-area: 4 / 3 / 4 / 11;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 20rem;
+  grid-column-gap: 21rem;
   grid-template-rows: auto auto;
   grid-row-gap: 2rem;
 }
@@ -1456,15 +1512,23 @@ figure {
   grid-area: 2 / 1;
 }
 
+.dashboard_wrapper_1 img {
+  width: 31rem;
+}
+
 .ut_wrapper_3 .dashboard_wrapper_2 {
   grid-area: 2 / 2;
+}
+
+.dashboard_wrapper_2 img {
+  width: 31rem;
 }
 
 .testandproto .ut_wrapper_4 {
   grid-area: 5 / 3 / 5 / 11;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: 20rem;
+  grid-column-gap: 21rem;
   grid-template-rows: auto auto;
   grid-row-gap: 2rem;
 }
@@ -1477,8 +1541,16 @@ figure {
   grid-area: 2 / 1;
 }
 
+.doc_editor_wrapper_1 img {
+  width: 31rem;
+}
+
 .ut_wrapper_4 .doc_editor_wrapper_2 {
   grid-area: 2 / 2;
+}
+
+.doc_editor_wrapper_2 img {
+  width: 31rem;
 }
 
 .testandproto .ut_wrapper_5 {
@@ -1497,15 +1569,21 @@ figure {
 .ut_wrapper_5 .land_page1 {
   grid-area: 2 / 1 / 2 / 1;
 /*  padding-right: 2rem;*/
+  width: 20rem;
+  justify-self: center;
 }
 
 .ut_wrapper_5 .land_page2 {
   grid-area: 2 / 2 / 2 / 2;
   /*padding-right: 2rem;*/
+  width: 20rem;
+  justify-self: center;
 }
 
 .ut_wrapper_5 .land_page3 {
   grid-area: 2 / 3 / 2 / 3;
+  width: 20rem;
+  justify-self: center;
 }
 .ut_wrapper_5 .land_page_wrapper_1 {
   grid-area: 3 / 1 / 3 / 2;
@@ -1519,12 +1597,11 @@ figure {
   grid-area: 3 / 2;
 }
 
-
 .sections .lessons{
-  grid-area: 6 / 1 / 6 / 13;
+  grid-area: 7 / 1 / 7 / 13;
   display: grid;
   grid-template-columns: repeat(12,1fr);
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto;
   grid-row-gap: 10rem;
 }
 
@@ -1544,6 +1621,7 @@ figure {
   display: grid;
   grid-template-columns: repeat(3,1fr);
   grid-template-rows: 1fr;
+  margin-top: 10rem;
 }
 
 .sections .section_h2 {
@@ -1584,17 +1662,4 @@ figure {
 .lessons_learned .btn_lessons{
   grid-area: 2 / 1 / 2 / 3;
   justify-self: center;
-}
-.sections .branding{
-  grid-area: 5 / 1 / 5 / 13;
-}
-
-.sections .testandproto{
-  grid-area: 6 / 1 / 6 / 13;
-}
-
-.sections .lessons{
-  grid-area: 7 / 1 / 7 / 13;
-}
-
 }
